@@ -2,6 +2,12 @@ GenericSetup Product Changelog
 
   GenericSetup 1.5.0 (unreleased)
 
+    - Introduced a new IComponentsHandlerBlacklist interface. You can register
+      named utilities for it and provide sequences of interfaces which should
+      not be handled by the standard components registry adapter. This allows
+      more specialized export/import handlers to take full control over the
+      components they care about.
+
     - When loading multiple profiles reload the list of steps to use after
       each import. https://bugs.launchpad.net/zope-cmf/+bug/213905
 
